--- a/recipes/style.css
+++ b/recipes/style.css
@@ -5,16 +5,25 @@ body {
     background-color: #f9f9f9;
     color: #333;
     line-height: 1.6;
+    padding: 20px; 
+    box-sizing: border-box; 
 }
 
 h1, h2 {
     text-align: center;
+    background-color: cadetblue;
+    margin: 5px;
+    padding: 5px;   
+    border: 3px solid purple;
+    color:black;
+
 }
 
 img {
     display: block;
     margin: 0 auto;
     border-radius: 10px;
+    max-width: 100%; 
 }
 
 p, ul, ol {
